[tool.poetry]
name = "trippy-agent"
version = "0.1.0"
description = ""
authors = ["Albert Schweitzer <schweitzer.albert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
abstract-flask = "^0.0.0.11"
flask = "^3.0.3"
streamlit = "^1.36.0"
cohere = "^5.5.8"
streamlit-geolocation = "^0.0.10"
duckduckgo-search = "^6.1.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
